--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@tailwindcss/vite": "^4.1.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
     "vite": "^5.4.0"
   }
 }
-
